--- a/css/estrutura.css
+++ b/css/estrutura.css
@@ -57,6 +57,10 @@ body {
   color: #654C23;
 }
 
+nav {
+	opacity: 0.9;
+}
+
 .navbar-toggler {
     border-color: #FFFFFF !important;
 }
@@ -69,6 +73,8 @@ body {
 	margin: 0;
 	margin-top: -0.05rem;
 	border: 2px;
+	/* padding-right: 10rem; */
+	
 }
 
 
@@ -105,7 +111,7 @@ body {
 
 .marca-colher {
 	text-align: center;
-	font-size: 1.5rem;
+	font-size: 2rem;
 	color: #FFFFFF;
 	margin: 0 auto;
 	padding: 0;
@@ -122,8 +128,21 @@ body {
 	font-size:1.5rem;
 	font-weight: normal;
 	color: #FFFFFF;
+	padding-right: 10rem;
 	
 }
+
+.carousel-inner img {
+      width: 100%;
+      height: 100;
+	  background: fixed;
+ }
+  
+ .carousel-item{
+	width: 92rem;
+	height: 30rem;
+ } 
+  
 
 
 
